# discord-bot-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  command_registry.cpp  deploy.cpp  hello.cpp  main.cpp  memoryManager.cpp
commands/: hello.cpp  ping.cpp
include/: command.hpp  memoryManager.hpp  utils.hpp
